# brown_belt_cxx

./: .gitignore  CMakeLists.txt  README.md  stop.h
final/: CMakeLists.txt  bus_stop.cpp  bus_stop.h  create_send_archive.sh  create_solution.sh  main.cpp  request.h  route.cpp  route.h  sphere_point.cpp  sphere_point.h  test_transport_directory.h  transport_directory.cpp  transport_directory.h
final/geometry/: CMakeLists.txt  sphere_point.cpp  sphere_point.h
final/graphs/: oriented_graph.h
final/parsers/: parsing_stuff.cpp  parsing_stuff.h
final/requests/: request.h
final/transport_directory/: CMakeLists.txt  bus_stop.cpp  bus_stop.h  road_map.cpp  road_map.h  route.h  route_informator.cpp  route_informator.h
week1/: CMakeLists.txt
week1/hash_person/: CMakeLists.txt  README.md  main.cpp
week1/hash_point/: CMakeLists.txt  README.md  TASK_DESCRIPTION.md  main.cpp
week1/hash_table/: CMakeLists.txt  TASK_DESCRIPTION.md  hash_table.h  main.cpp
week1/secondary_index/: CMakeLists.txt  README.md  database.cpp  database.h  main.cpp  record.h
week1/set_iterator/: CMakeLists.txt  README.md  main.cpp  node_builder.cpp  node_builder.h
week1/task1/: CMakeLists.txt  main.cpp
week1/task2/: CMakeLists.txt  main.cpp
week2/: CMakeLists.txt
week2/code_refactoring/: CMakeLists.txt  main.cpp  stats_aggregator.h  stats_aggregator_test.cpp
week2/game_collisions/: CMakeLists.txt  collide.cpp  game_object.h
week2/game_collisions/geo2d/: CMakeLists.txt  geo2d.cpp  geo2d.h
week2/http_request/: CMakeLists.txt  http_response.cpp  http_response.h  main.cpp  send.cpp
week2/ini_loader/: CMakeLists.txt  ini.cpp  ini.h  main.cpp
week2/json_loader/: CMakeLists.txt  json.h  main.cpp
week2/xml_loader/: CMakeLists.txt  main.cpp  xml.cpp  xml.h
week3/: CMakeLists.txt
week3/concurent_map/: CMakeLists.txt  concurrent_map.h  main.cpp  test_methods.cpp
week3/demographical_indicators/: CMakeLists.txt
week3/lazy_value/: CMakeLists.txt  main.cpp
week3/object_pool/: CMakeLists.txt  object_pool.h
week3/pipline/: CMakeLists.txt  main.cpp
week3/polynomial/: CMakeLists.txt  main.cpp
week3/synchronized/: CMakeLists.txt  main.cpp
week3/tree/: CMakeLists.txt  Common.cpp  Common.h  main.cpp
week3/zoo/: CMakeLists.txt  animals.h  main.cpp
week4/: CMakeLists.txt
week4/cache/: CMakeLists.txt  Common.h  Solution.cpp
week4/raii_booking/: CMakeLists.txt  booking.h  new_booking_providers.h  new_trip_manager.h  old_booking_providers.h  old_trip_manager.h
week4/textures/: CMakeLists.txt  Common.h  Solution.cpp  Textures.h
week4/unique_ptr/: CMakeLists.txt  main.cpp
week5/: CMakeLists.txt
week5/banned_domains/: CMakeLists.txt  main.cpp
week5/budget_home_desktop_version/: CMakeLists.txt  date.cpp  date.h  income_manager.cpp  income_manager.h  main.cpp  query.cpp  query.h  solution.cpp
week5/budget_proffessional_desktop_version/: CMakeLists.txt  budget_system.cpp  budget_system.h  date.cpp  income.cpp  income.h  main.cpp  query.cpp  query.h  solution.cpp
