cmake_minimum_required(VERSION 3.21)

project(WEEK_3)

set(CMAKE_CXX_STANDARD 17)

add_subdirectory(demographical_indicators)
add_subdirectory(lazy_value)
add_subdirectory(concurent_map)
add_subdirectory(synchronized)
add_subdirectory(object_pool)
add_subdirectory(zoo)
add_subdirectory(polynomial)
add_subdirectory(pipline)
add_subdirectory(tree)
